# rusty_play

./: Cargo.toml  LICENSE.txt  README.md
src/: bootstrap.rs  errors.rs  lib.rs  main.rs  math.rs  profiler.rs  rendering.rs  ui.rs
src/contexts/: mod.rs  setup.rs
src/ecs/: entity.rs  mod.rs  world.rs
src/ecs/component/: animation.rs  animation_component.rs  health.rs  health_component.rs  mod.rs  transform.rs  transform_component.rs  weapon.rs  weapon_component.rs
src/warehouse/: mod.rs
src/warehouse/resources/: mod.rs  ttf.rs
